// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be invalid for bad date 1`] = `
Object {
  "startedAt": Object {
    "key": "yup:mixed.notType",
    "options": Object {
      "type": "date",
    },
  },
}
`;

exports[`should be invalid for bad section id 1`] = `
Object {
  "sectionId": Object {
    "key": "yup:string.uuid",
    "options": Object {
      "path": "sectionId",
    },
  },
}
`;

exports[`should be invalid for bad uuid 1`] = `
Object {
  "id": Object {
    "key": "yup:string.uuid",
    "options": Object {
      "path": "id",
    },
  },
}
`;

exports[`should be invalid for extra fields 1`] = `
Object {
  "": Object {
    "key": "yup:object.noUnknown",
    "options": Object {
      "path": "this",
    },
  },
}
`;
